Fixed"Gina Ienopoli" spacing and font size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,7 +78,7 @@ h6 {
   font-weight: 400;
   font-family: "Taviraj", serif;
   text-transform: uppercase;
-  letter-spacing: 2.5px;
+  letter-spacing: .5px;
 }
 
 #header h1 a,
@@ -130,7 +130,7 @@ h6 {
 
 @media (max-width: 992px) {
   #header h1 {
-    font-size: 36px;
+    font-size: 50px;
   }
 
   #header h2 {
